[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Texture/Font Style/LoveGlitchPersonalUseRegular-vmEyA.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Texture/Icons/shoter.png" type="Texture" id=3]
[ext_resource path="res://Texture/Icons/nextd.png" type="Texture" id=4]
[ext_resource path="res://Texture/Icons/next.png" type="Texture" id=5]
[ext_resource path="res://Texture/Icons/menu.png" type="Texture" id=6]
[ext_resource path="res://Texture/Icons/shield.png" type="Texture" id=7]
[ext_resource path="res://Texture/Icons/sword.png" type="Texture" id=8]
[ext_resource path="res://Texture/Icons/special.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 2 )

[node name="Camera2D" type="Camera2D"]
anchor_mode = 0
current = true
script = ExtResource( 1 )

[node name="Buttone" type="Button" parent="."]
margin_top = 160.0
margin_right = 60.0
margin_bottom = 400.0
custom_styles/focus = SubResource( 1 )
icon = ExtResource( 5 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true

[node name="Buttond" type="Button" parent="."]
margin_left = 965.0
margin_top = 160.0
margin_right = 1024.0
margin_bottom = 400.0
focus_mode = 1
custom_styles/focus = SubResource( 2 )
enabled_focus_mode = 1
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true

[node name="Button_options" type="Button" parent="."]
pause_mode = 2
margin_left = 960.0
margin_top = 10.0
margin_right = 1484.0
margin_bottom = 528.0
rect_scale = Vector2( 0.1, 0.1 )
icon = ExtResource( 6 )
flat = true

[node name="Button_mele" type="Button" parent="."]
margin_left = 15.0
margin_top = 18.0
margin_right = 539.0
margin_bottom = 536.0
rect_scale = Vector2( 0.1, 0.09 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true
icon_align = 1

[node name="Button_shoter" type="Button" parent="."]
margin_left = 92.0
margin_top = 15.0
margin_right = 616.0
margin_bottom = 533.0
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
custom_styles/pressed = SubResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="Button_tank" type="Button" parent="."]
margin_left = 164.0
margin_top = 15.0
margin_right = 688.0
margin_bottom = 533.0
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
custom_styles/pressed = SubResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
icon_align = 1

[node name="Button_special" type="Button" parent="."]
margin_left = 236.0
margin_top = 15.0
margin_right = 760.0
margin_bottom = 533.0
rect_scale = Vector2( 0.1, 0.1 )
focus_mode = 0
custom_styles/pressed = SubResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
icon_align = 1

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_left = 6.10352e-05
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.427451 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 411.0
margin_top = 214.0
margin_right = 611.0
margin_bottom = 386.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 4 )
text = "Paused"
align = 1

[node name="Control" type="Control" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 10 )

[node name="Button_Resume" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 116.0
rect_min_size = Vector2( 200, 40 )
custom_fonts/font = SubResource( 5 )
text = "Resume"

[node name="Button_Quit" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 200.0
margin_bottom = 172.0
rect_min_size = Vector2( 200, 40 )
custom_fonts/font = SubResource( 6 )
text = "Quit"

[connection signal="mouse_entered" from="Buttone" to="." method="_on_Buttone_mouse_entered"]
[connection signal="mouse_exited" from="Buttone" to="." method="_on_Buttone_mouse_exited"]
[connection signal="mouse_entered" from="Buttond" to="." method="_on_Buttond_mouse_entered"]
[connection signal="mouse_exited" from="Buttond" to="." method="_on_Buttond_mouse_exited"]
[connection signal="pressed" from="Button_options" to="." method="_on_Button_options_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Button_Resume" to="." method="_on_Button_Resume_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Button_Quit" to="." method="_on_Button_Quit_pressed"]
